Add detailed project cards for portfolio

--- a/index.html
+++ b/index.html
@@ -21,9 +21,38 @@
   </header>
 
   <main class="container">
-    <section id="projects" class="card">
+    <section id="projects" class="card projects-section">
       <h2>Projects</h2>
-      <p>Highlight key projects here. Describe your role, the tech stack, and the impact of each project.</p>
+      <p>
+        Highlight key projects here. Describe your role, the tech stack, and the impact of each project.
+      </p>
+      <div class="projects-grid">
+        <article class="project-card">
+          <h3>Schedulist</h3>
+          <p>
+            Designed an intelligent scheduling assistant that coordinates study groups and club
+            meetings, automatically resolving conflicts and syncing with shared calendars for a
+            seamless planning experience.
+          </p>
+          <p class="project-tech"><strong>Tech Stack:</strong> React, TypeScript, Node.js, Express, PostgreSQL, AWS Lambda</p>
+        </article>
+
+        <article class="project-card">
+          <h3>ZipXpress</h3>
+          <p>
+            Built a logistics optimization dashboard that consolidates regional carrier data, provides
+            real-time parcel tracking, and recommends the most cost-effective shipping routes for
+            small businesses.
+          </p>
+          <p class="project-tech"><strong>Tech Stack:</strong> Python, Django, Celery, Redis, PostgreSQL, AWS S3</p>
+        </article>
+
+        <!-- Additional project cards can be added below -->
+        <article class="project-card project-placeholder">
+          <h3>Upcoming Project</h3>
+          <p>Details coming soon. Stay tuned for more updates.</p>
+        </article>
+      </div>
     </section>
 
     <section id="certifications" class="card">
