--- a/index.html
+++ b/index.html
@@ -3,46 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Chimdumebi Nebolisa | Portfolio</title>
+  <title>Chimdumebi Mitchell Nebolisa | Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header class="site-header">
-    <div class="container">
-      <h1>Chimdumebi Nebolisa</h1>
-      <nav class="site-nav">
+    <div class="container site-header__inner">
+      <nav class="site-nav" aria-label="Primary">
         <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About Me</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#certifications">Certifications</a></li>
-          <li><a href="#publications">Publications</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main class="container">
-    <section id="projects" class="card">
-      <h2>Projects</h2>
-      <p>Highlight key projects here. Describe your role, the tech stack, and the impact of each project.</p>
-    </section>
-
-    <section id="certifications" class="card">
-      <h2>Certifications</h2>
-      <p>List professional certifications, courses, or training that showcase your expertise.</p>
-    </section>
-
-    <section id="publications" class="card">
-      <h2>Publications</h2>
-      <p>Share academic papers, articles, talks, or other public-facing work you’ve authored.</p>
-    </section>
-  </main>
-
   <footer class="site-footer">
     <div class="container">
-      <p>&copy; <span id="year"></span> Chimdumebi Nebolisa. All rights reserved.</p>
+      <p>&copy; <span id="year"></span> Chimdumebi Mitchell Nebolisa. All rights reserved.</p>
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
